# ai-compiler-framework

./: README.md
ai-compiler-framework/: .gitignore  CMakeLists.txt  README.md  build_command.md
ai-compiler-framework/artifacts/: import_trace_corev2.json  import_trace_fw.json  keep_files.txt
ai-compiler-framework/artifacts/20260128_222814_v2_kid_trace_by_id_test/: 31_op_attrs.txt
ai-compiler-framework/docs/architecture/: backend-cuda.md  overview.md  runtime.md
ai-compiler-framework/examples/: cuda_eltwise_bench.cu  cuda_eltwise_bench.md  cuda_gemm_bench.cu  smoke.cpp
ai-compiler-framework/examples/python/: minitest_train.py  test_aicf_pyd.py  test_aicf_variants_ncu.py  train_mlp.py  train_mlp_v2_dtype.py  train_mlp_v2_dtype_min.py
ai-compiler-framework/examples/python/aicf_fw/: aicf_backend.py  autograd.py  backend.py  ops.py  tensor.py  torch_backend.py  trainer.py
ai-compiler-framework/examples/python/aicf_fw/backend/: __init__.py  abi.py  aicf_backend.py  base.py  cuda.py  torch_backend.py
ai-compiler-framework/examples/python/aicf_fw/core/: artifact.py  autograd.py  compile.py  executor.py  functional.py  ir.py  module.py  runtime.py  tensor.py  trace.py  train_graph.py  train_state.py  validate.py  warmup.py
ai-compiler-framework/examples/python/aicf_fw/core_v2/: README_stage6.md  __init__.py  compile.py  cuda_exec.py  exec.py  ir.py  lower.py  ops.py  plan.py  printer.py  trace.py
ai-compiler-framework/examples/python/aicf_fw/fw/: __init__.py  compile.py  module.py  naming.py  train_step.py
ai-compiler-framework/examples/python/aicf_fw/losses/: base.py  mse.py
ai-compiler-framework/examples/python/aicf_fw/modules/: __init__.py  activations.py  base.py  linear.py  relu.py  sequential.py
ai-compiler-framework/examples/python/aicf_fw/nn/: __init__.py  base.py  linear.py  losses.py  relu.py  sequential.py
ai-compiler-framework/examples/python/aicf_fw/ops/: reduce_sum.py
ai-compiler-framework/examples/python/aicf_fw/optim/: __init__.py  adam.py  base.py  sgd.py
ai-compiler-framework/examples/python/aicf_fw/utils/: nvtx.py  profiling.py
ai-compiler-framework/examples/python/cuda_binding_test/: test_adam_step.py  test_adam_step_biascorr.py  test_adam_step_biascorr_tensor_trace.py  test_aicf_pyd.py  test_aicf_variants_ncu.py  test_batchnorm_bwd.py  test_batchnorm_fwd.py  test_bias_add_v1.py  test_biascorr.py  test_functional_adam_step_runtime_trace.py  test_grad_zero.py  test_graph_replay_adamstep_trace.py  test_layernorm_bwd.py  test_layernorm_fwd.py  v2_add_probe.py  v2_biascorr_probe.py  v2_grad_zero_probe.py  v2_reduce_sum_probe.py  v2_relu_probe.py
ai-compiler-framework/examples/python/python_binding_test/: test_add_bias_ncu.py  test_aicf_variants_ncu.py  test_gemm_chain_out_f16.py  test_gemm_tc.py  test_gemm_tc_out_f16.py  test_gemm_tc_v2.py  test_gemm_tc_v3.py  test_graph_capture_smoke.py  test_ir_exec_gemm.py  test_mse_grad_ncu.py  test_mse_grad_scale.py  test_reduce_sum_ncu.py  test_relu_bwd_ncu.py  test_sgd_step_ncu.py  test_sgd_step_vs_torch.py  test_train_1step_gradcheck.py  test_train_step_1cycle.py  v2_adam_p_update_probe.py  v2_bias_add_probe.py  v2_copy_probe.py  v2_gemm_attr_smoke.py  v2_gemm_probe.py  v2_mse_grad_probe.py  v2_ops_unit_smoke.py  v2_ops_unit_smoke_opt.py  v2_ops_unit_smoke_v2.py  v2_relu_bwd_probe.py  v2_sgd_step_probe.py  v2_step_inc_probe.py
ai-compiler-framework/examples/python/python_framework_test/: _kid_op_utils.py  _test_path_bootstrap.py  ir_exec_test.py  minitest_train_replay_v2.py  minitest_train_replay_v3.py  minitest_train_replay_v3_adam.py  minitest_train_torch_only.py  minitest_train_v2.py  pr1_verify_compile_ir.py  pr2_verify_ir_links_and_determinism.py  pr3_verify_ir_shapes_topo_and_determinism.py  pr4_verify_ir_shapes_topo_and_determinism.py  pr5_verify_ir_execute_and_determinism.py  pr6_1_verify_replay_equals_irexec.py  pr6_2_verify_warmup_replay_irexec.py  pr6_verify_param_identity_grad_and_determinism.py  pr6_verify_replay_vs_irexec.py  pr7_verify_adamstep_path_tracing_dup.py  python_framework_test.py  test_gemm_trans_strided.py  test_gemm_unified_strided.py  test_gemm_unified_strided_cli.py  train_graph.py  v2_bwd_dump_and_check.py  v2_exec_cuda_smoke.py  v2_exec_run.py  v2_fw_mvp_train_step_test.py  v2_ir_dump.py  v2_kid_exec_capture_test.py  v2_kid_op_bias_add_vec2_test.py  v2_kid_op_gemm_test.py  v2_kid_op_reduce_sum_test.py  v2_kid_op_sgd_step_half2_attr_schema_test.py  v2_kid_op_sgd_step_half2_lr_probe_test.py  v2_kid_op_sgd_step_half2_test.py  v2_kid_stageAB_test.py  v2_kid_trace_by_id_test.py  v2_lower_dump.py  v2_plan_dump.py  v2_stage6_1_train1_check.py  (+12 more)
ai-compiler-framework/include/aicf/backends/cuda/: nvtx.hpp
ai-compiler-framework/include/aicf/core/: log.hpp  status.hpp
ai-compiler-framework/include/aicf/ir/: ir.hpp  lowering.hpp
ai-compiler-framework/include/aicf/runtime/: graph.hpp  stream.hpp
ai-compiler-framework/python/: README.md  README_stage6.md
ai-compiler-framework/python/aicf_fw/backend/: validate.py
ai-compiler-framework/python/aicf_fw/core_v2/: README_stage6.md  __init__.py  cuda_exec.py  exec.py  kernel_select.py  opt_rules.py  printer.py
ai-compiler-framework/python/aicf_fw/fw/: __init__.py
ai-compiler-framework/python/aicf_fw/nn/: __init__.py  relu.py
ai-compiler-framework/python/aicf_fw/optim/: __init__.py  adam.py
ai-compiler-framework/python/cuda_binding_test/: v2_adam_step_probe.py  v2_batchnorm_probe.py  v2_gemm_epilogue_probe.py  v2_layernorm_probe.py
ai-compiler-framework/python/python_framework_test/: python_framework_test.py
ai-compiler-framework/src/backends/cuda/: cuda_context.cu  nvtx.cu
ai-compiler-framework/src/core/: log.cpp  status.cpp
ai-compiler-framework/src/ir/: ir.cpp  lowering.cpp
ai-compiler-framework/src/python_bindings/: add.cpp  bindings.cpp  common.hpp  gemm.cpp  relu.cpp
ai-compiler-framework/src/runtime/: capture_plan.cpp  graph.cpp  graph_exec.cpp
ai-compiler-framework/tools/: make_keep_list.py  static_import_scan.py  trace_imports.py
ai-compiler-framework/tools/codegen/: new_op.py
(+114 files in other folders)
